Mutsuna fixed errors in footer and css

--- a/@components/growth-cat.html
+++ b/@components/growth-cat.html
@@ -1,10 +1,10 @@
 <div>
     <a href="./growth/dog/growth.html" style="text-decoration: none;">
-        <button id="dog-btn-clicked">Куче</button>
+        <button id="dog-btn">Куче</button>
     </a> 
     или 
     <a href="./growth/cat/growth.html" style="text-decoration: none;">
-        <button id="cat-btn">Коте</button>
+        <button id="cat-btn-clicked">Коте</button>
     </a>
 </div>
 
@@ -30,7 +30,7 @@
     <li>
         <a  data-href   = "./growth/cat/pet-years"
             href        = "./growth/cat/pet-years.html">
-            Изчисляване на възрастта в "кучешки" години
+            Изчисляване на възрастта в "котешки" години
         </a>
     </li>
     <li>
