--- a/@layout/footer-cat.html
+++ b/@layout/footer-cat.html
@@ -77,7 +77,7 @@
         <script src="./breed.cat.collection.js"></script>
         <script src="./breed.library.js"></script>
 
-        <!-- <script src="./current-articles-dog.js"></script> -->
+        <script src="./current-articles-cat.js"></script>
         <script src="./todays-breed.js"></script>
         <script src="./todays-article.js"></script>
         <script src="./animations.js"></script>
