--- a/@layout/header.html
+++ b/@layout/header.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Муцуна | {{{title}}}</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
+    <link rel="stylesheet" href="./nutrition-calculator-compare-foods.css" />
     <link rel="stylesheet" href="./animations.css" />
-    <link rel="stylesheet" href="./home-menu.css" />
     <link rel="stylesheet" href="./rabies-validation-date.css" />
-    <link rel="stylesheet" href="./current-articles.css" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./home-menu.css" />
+    <link rel="stylesheet" href="./current-articles.css" />
 
 
     <link rel="stylesheet" href="./are-you-ready.css" />
