--- a/src/adjustment/cat/adjustment.html
+++ b/src/adjustment/cat/adjustment.html
@@ -31,4 +31,4 @@
 </section>
 
 <!-- FOOTER -->
-<include what="@@layout/footer.html"></include>
+<include what="@@layout/footer-cat.html"></include>
