--- a/src/how-take-care/cat/toilet.html
+++ b/src/how-take-care/cat/toilet.html
@@ -3,7 +3,7 @@
 <include what="@@layout/menu.html">
     <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
     <span class="breadcrumb-link">  /  </span>
-    <a class="breadcrumb-link no-dec" href="./how-take-care/how-take-care.html">Как да се грижа ?</a>    
+    <a class="breadcrumb-link no-dec" href="./how-take-care/how-take-care.html">Как да се грижа?</a>    
 </include>
 
 
@@ -111,4 +111,4 @@
 
 
 <!-- FOOTER -->
-<include what="@@layout/footer.html"></include>
+<include what="@@layout/footer-cat.html"></include>
