--- a/src/what-for-you/are-you-ready-for-cat/are-you-ready.html
+++ b/src/what-for-you/are-you-ready-for-cat/are-you-ready.html
@@ -76,7 +76,7 @@
                                         <div class="answer" style="display: none;">
                                             <h4>Отговор: Вече съм изготвил списък с необходимите неща и ще ги закупя преди да донеса котето у дома.</h4>
                                             <p>От голяма важност е още преди да си вземеш котка, да се снабдиш с всичко необходимо, за да не изпаднеш в ситуация, при която нещо ти трябва, но липсва.
-                                            <br>(Виж: <a href="./adjustment/cat/preparing.html">Приспособяване в новия дом: Подготовка на дома</a>)
+                                            <br>(Виж: <a href="./adjustment-cat-preparing.html">Приспособяване в новия дом: Подготовка на дома</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -106,7 +106,7 @@
                                         <div class="answer">
                                             <h4>Отговор: Ще наблюдавам котката 2-3 дни и постепенно ще запознавам котката с новите ѝ среда и семейство.</h4>
                                             <p>В началото твоята котка ще се приспособява към новия си дом и трябва да се увериш, че всичко ще мине гладко.
-                                            <br> (Виж: <a href="./adjustment/cat/first-days.html">Приспособяване в новия дом: Първи дни на твоя любимец</a>)
+                                            <br> (Виж: <a href="./adjustment-cat-first-days.html">Приспособяване в новия дом: Първи дни на твоя любимец</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -136,7 +136,7 @@
                                         <div class="answer">
                                             <h4>Отговор: Да.</h4>
                                             <p>Важно е да обезопасиш дома си, защото покрай любопитството ѝ твята котка може да пострада от отровни растения и храни, опасни лекарства и вещества, дъвченето и гълтането на кабели и предмети, както и отворените врати, през които тя може да избяга на улицата.
-                                            <br> (Виж: <a href="./adjustment/cat/preparing.html">Приспособяване в новия дом: Подготовка на дома</a>)
+                                            <br> (Виж: <a href="./adjustment-cat-preparing.html">Приспособяване в новия дом: Подготовка на дома</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -166,7 +166,7 @@
                                         <div class="answer">
                                             <h4>Отговор: Да.</h4>
                                             <p>Препоръчително е котката да научи своето име, колкото е възможно по-рано, в идеалния случай – още от първия ден. Това е важна стъпка в общуването с любимеца ти, защото основният начин, по който ще привличаш вниманието му и ще го обучаваш, е чрез неговото име.           
-                                            <br> (Виж: <a href="./adjustment/cat/name.html">Приспособяване в новия дом: Избор на име</a>)
+                                            <br> (Виж: <a href="./adjustment-cat-name.html">Приспособяване в новия дом: Избор на име</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -199,7 +199,7 @@
                                         <div class="answer">
                                             <h4>Отговор: Колкото е необходимо.</h4>
                                             <p>Независимо каква порода е, всяка котка е различна по един или друг начин. Ключът към добре възпитана и безпроблемна котка е търпението към нужното време за обучение и постоянството.
-                                            <br> (Виж: <a href="../../how-take-care/cat/how-take-care.html">Как да се грижа: Обучение</a>)
+                                            <br> (Виж: <a href="./how-take-care-cat-how-take-care.html">Как да се грижа: Обучение</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -279,7 +279,7 @@
                                     <div class="answer">
                                         <h4>Отговор: Съскане. Ръмжене. Плюене. Оголване на зъбите.</h4>
                                         <p>Съскането, ръмженето и плюенето са вербални сигнали, а оголването на зъбите са невербални сигнали на агресивност при котките.
-                                        <br>(Виж: <a href="../../how-take-care/cat/language.html">Как да се грижа? Как общуват котките.</a>)
+                                        <br>(Виж: <a href="./how-take-care-cat-language.html">Как да се грижа? Как общуват котките.</a>)
                                         </p>
                                         <div class="answer-navigation">
                                             <div class="next nav-item"><a>Следващ въпрос</a>
@@ -341,7 +341,7 @@
                                         <div class="answer">
                                             <h4>Отговор: Да нахраня и обгрижа котката.</h4>
                                             <p>Както човек има нужда да закусва всяка сутрин след сън, така и котката има нужда от закуска.
-                                            <br>(Виж: <a href="../../how-take-care/cat/how-take-care.html">Как да се грижа?</a>)
+                                            <br>(Виж: <a href="./how-take-care-cat-how-take-care.html">Как да се грижа?</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -418,7 +418,7 @@
                                         <div class="answer">
                                             <h4>Отговор: Невярно</h4>
                                             <p>Не всяка храна, която е годна за човешка консумация, е безвредна за котките. Преди да даваш храна на любимеца си, потърси информация и се увери, че тя е безопасна за него!
-                                            <br>(Виж: <a href="./adjustment/cat/poisons.html">Приспособяване в новия дом. Скритите отрови в дома.</a>)
+                                            <br>(Виж: <a href="./adjustment-cat-poisons.html">Приспособяване в новия дом. Скритите отрови в дома.</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -528,7 +528,7 @@
                                         <div class="answer">
                                             <h4>Отговор: Невярно</h4>
                                             <p>Социализацията на котката ти е от изключителна важност и не трябва да бъде пренебрегвана!
-                                            <br>(Виж: <a href="../../growth/cat/phases.html">Разтеж и развитие: Фази на растеж</a>)
+                                            <br>(Виж: <a href="./growth-cat-phases.html">Разтеж и развитие: Фази на растеж</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -576,8 +576,8 @@
                                     <div class="answer">
                                         <h4>Отговор: Ежемесечно обезпаразитяване, ваксинации и ежегодни прегледи.</h4>
                                         <p>Обезпаразитяването, ваксинациите и ежегодните прегледи са важна стъпка към здравето на любимеца ти. Те не са еднократни, но са през определен период от време и назначени от ветеринарен лекар.
-                                        <br>(Виж: <a href="../../health-care/cat/vaccination.html">Здравни грижи. Ваксинация на котка.</a>)
-                                        <br>(Виж: <a href="../../health-care/cat/deworming.html">Здравни грижи. Обезпаразитяване.</a>)
+                                        <br>(Виж: <a href="./health-care-cat-vaccination.html">Здравни грижи. Ваксинация на котка.</a>)
+                                        <br>(Виж: <a href="./health-care-cat-deworming.html">Здравни грижи. Обезпаразитяване.</a>)
                                         </p>
                                         <div class="answer-navigation">
                                             <div class="next nav-item"><a>Следващ въпрос</a>
@@ -617,7 +617,7 @@
                                     <div class="answer">
                                         <h4>Отговор: Да. / Потърсих и избрах няколко ветеринарни кабинета/ клиники.</h4>
                                         <p>Ветеринарният лекар ще се грижи за здравето на твоя любимец още от малко котенце. Важно е да намериш добър ветеринарен лекар, на когото можеш да се довериш.
-                                        <br>(Виж: <a href="../../health-care/cat/which-vet.html">Здравни грижи: Избор на ветеринарен лекар</a>)
+                                        <br>(Виж: <a href="./health-care-cat-which-vet.html">Здравни грижи: Избор на ветеринарен лекар</a>)
                                         </p>
                                         <div class="answer-navigation">
                                             <div class="next nav-item"><a>Следващ въпрос</a>
