--- a/src/what-for-you/are-you-ready-for-dog/are-you-ready.html
+++ b/src/what-for-you/are-you-ready-for-dog/are-you-ready.html
@@ -76,7 +76,7 @@
                                         <div class="answer" style="display: none;">
                                             <h4>Отговор: Вече съм изготвил списък с необходимите неща и ще ги закупя преди да донеса кученцето у дома.</h4>
                                             <p>От голяма важност е още преди да си вземеш куче, да се снабдиш с всичко необходимо, за да не изпаднеш в ситуация, при която нещо ти трябва, но липсва.
-                                            <br>(Виж: <a href="#">Приспособяване в новия дом: Подготовка на дома</a>)
+                                            <br>(Виж: <a href="./adjustment-dog-preparing.html">Приспособяване в новия дом: Подготовка на дома</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -106,7 +106,7 @@
                                         <div class="answer">
                                             <h4>Отговор: Ще наблюдавам кучето 2-3 дни и постепенно ще запознавам кучето с новите му среда и семейство.</h4>
                                             <p>В началото твоето куче ще се приспособява към новия си дом и трябва да се увериш, че всичко ще мине гладко.
-                                            <br> (Виж: <a href="#">Приспособяване в новия дом: Първи дни на твоя любимец</a>)
+                                            <br> (Виж: <a href="./adjustment-dog-first-days.html">Приспособяване в новия дом: Първи дни на твоя любимец</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -136,7 +136,7 @@
                                         <div class="answer">
                                             <h4>Отговор: Да.</h4>
                                             <p>Важно е да обезопасиш дома си, защото покрай любопитството му твоето куче може да пострада от отровни растения и храни, опасни лекарства и вещества, дъвченето и гълтането на кабели и предмети, както и отворените врати, през които то може да избяга на улицата.
-                                            <br> (Виж: <a href="#">Приспособяване в новия дом: Подготовка на дома</a>)
+                                            <br> (Виж: <a href="./adjustment-dog-preparing.html">Приспособяване в новия дом: Подготовка на дома</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -166,7 +166,7 @@
                                         <div class="answer">
                                             <h4>Отговор: Да.</h4>
                                             <p>Препоръчително е кучето да научи своето име, колкото е възможно по-рано, в идеалния случай – още от първия ден. Това е важна стъпка в общуването с любимеца ти, защото основният начин, по който ще привличаш вниманието му и ще го обучаваш, е чрез неговото име.           
-                                            <br> (Виж: <a href="#">Приспособяване в новия дом: Избор на име</a>)
+                                            <br> (Виж: <a href="./adjustment-dog-name.html">Приспособяване в новия дом: Избор на име</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -199,7 +199,7 @@
                                         <div class="answer">
                                             <h4>Отговор: Колкото е необходимо.</h4>
                                             <p>Независимо каква порода е, всяко куче е различно по един или друг начин. Ключът към добре възпитано и безпроблемно куче е търпението към нужното време за обучение и постоянството.                                                
-                                            <br> (Виж: <a href="#">Как да се грижа: Обучение</a>)
+                                            <br> (Виж: <a href="./how-take-care-dog-toilet.html">Как да се грижа: Обучение</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -279,7 +279,7 @@
                                     <div class="answer">
                                         <h4>Отговор: Лаене. Ръмжене. Настръхване на козината на гърба. Оголване на зъбите.</h4>
                                         <p>Лаенето и ръмженето са вербални сигнали, а настръхването на козината на гърба и оголването на зъбите са невербални сигнали на агресивност при кучетата.
-                                        <br>(Виж: <a href="#">Как да се грижа?</a>)
+                                        <br>(Виж: <a href="./how-take-care-dog-how-take-care.html">Как да се грижа?</a>)
                                         </p>
                                         <div class="answer-navigation">
                                             <div class="next nav-item"><a>Следващ въпрос</a>
@@ -341,7 +341,7 @@
                                         <div class="answer">
                                             <h4>Отговор: Да изведа кучето на разходка.</h4>
                                             <p>Както човек има нужда да мине през банята всяка сутрин след сън, така и кучето има нужда от разходка, за да се освободи от ненужните течности.
-                                            <br>(Виж: <a href="#">Как да се грижа: Обучение</a>)
+                                            <br>(Виж: <a href="./how-take-care-dog-toilet.html">Как да се грижа: Обучение</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -560,7 +560,7 @@
                                         <div class="answer">
                                             <h4>Отговор: Невярно</h4>
                                             <p>Социализацията на кучето ти е от изключителна важност и не трябва да бъде пренебрегвана!
-                                            <br>(Виж: <a href="#">Разтеж и развитие: Фази на растеж</a>)
+                                            <br>(Виж: <a href="./growth-dog-phases.html">Разтеж и развитие: Фази на растеж</a>)
                                             </p>
                                             <div class="answer-navigation">
                                                 <div class="next nav-item"><a>Следващ въпрос</a>
@@ -608,7 +608,7 @@
                                     <div class="answer">
                                         <h4>Отговор: Ежемесечно обезпаразитяване, ваксинации и ежегодни прегледи.</h4>
                                         <p>Обезпаразитяването, ваксинациите и ежегодните прегледи са важна стъпка към здравето на любимеца ти. Те не са еднократни, но през определен период от време и назначени от ветеринарен лекар.
-                                        <br>(Виж: <a href="#">Здравни грижи</a>)
+                                        <br>(Виж: <a href="./health-care-dog-health-care.html">Здравни грижи</a>)
                                         </p>
                                         <div class="answer-navigation">
                                             <div class="next nav-item"><a>Следващ въпрос</a>
@@ -648,7 +648,7 @@
                                     <div class="answer">
                                         <h4>Отговор: Да. / Потърсих и избрах няколко ветеринарни кабинета/ клиники.</h4>
                                         <p>Ветеринарният лекар ще се грижи за здравето на твоя любимец и още от малко кученце. Важно е да намериш добър ветеринарен лекар, на когото можеш да се довериш.
-                                        <br>(Виж: <a href="#">Здравни грижи: Избор на ветеринарен лекар</a>)
+                                        <br>(Виж: <a href="./health-care-dog-which-vet.html">Здравни грижи: Избор на ветеринарен лекар</a>)
                                         </p>
                                         <div class="answer-navigation">
                                             <div class="next nav-item"><a>Следващ въпрос</a>
