--- a/@layout/footer-dog.html
+++ b/@layout/footer-dog.html
@@ -77,12 +77,13 @@
         <script src="./breed.cat.collection.js"></script>
         <script src="./breed.library.js"></script>
 
-        <!-- <script src="./current-articles-dog.js"></script> -->
+        <script src="./current-articles-dog.js"></script>
         <script src="./todays-breed.js"></script>
         <script src="./todays-article.js"></script>
         <script src="./animations.js"></script>
         <script src="./rabies-validation-date.js"></script>
-        <script src="./vaccination-cat.js"></script>
+        <!-- <script src="./vaccination-cat.js"></script> -->
+        <script src="./vaccination-dog.js"></script>
         <script src="./script.js"></script>
 
         
