--- a/src/growth/cat/growth.html
+++ b/src/growth/cat/growth.html
@@ -32,4 +32,4 @@
 </section>
 
 <!-- FOOTER -->
-<include what="@@layout/footer.html"></include>
+<include what="@@layout/footer-cat.html"></include>
