--- a/src/how-take-care/cat/cat-litter.html
+++ b/src/how-take-care/cat/cat-litter.html
@@ -140,4 +140,4 @@
 </section>
 
 <!-- FOOTER -->
-<include what="@@layout/footer.html"></include>
+<include what="@@layout/footer-cat.html"></include>
